<?xml version="1.0.0"?>
<package>
    <name>pcr</name>
    <version>1.0.0</version>

    <description>
        Global PointCloud Registration
    </description>

    <maintainer email="1207244138@qq.com">Evanovic</maintainer>

    <license>.</license>

    <author email="1207244138@qq.com">Evanovic</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>message_runtime</run_depend>

    <test_depend>rostest</test_depend>
    <test_depend>rosbag</test_depend>

    <export>
    </export>
</package>
